--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,11 +11,12 @@
     <ion-toolbar>
       <ion-title size="large">Relevamiento visual</ion-title>
     </ion-toolbar>
+    <ion-button (click)='cerrarSesion()'>Cerrrar sesion</ion-button>
   </ion-header>
 
   <div id="container">
 
-
+    <h1>HOLISSSS</h1>
 
 
   </div>
